--- a/index.html
+++ b/index.html
@@ -22,14 +22,26 @@
             <a href="#">8 800 355 35 35</a>
         </div>
         <div class="socials">
-            <img src="img\i.png" alt="">
-            <img src="img\k.png" alt="">
-            <img src="img\p.png" alt="">
+            <a href=""><img src="img\i.png" alt=""></a>
+            <a href=""><img src="img\k.png" alt=""></a>
+            <a href=""><img src="img\p.png" alt=""></a>
         </div>
         <div class="language">
             <img src="img\UA.png" alt="">
             <img src="img\arrow.png" alt="">
         </div>
     </header>
+    <main>
+        <div class="burgers">
+            <h2>БУРГЕРИ</h2>
+            <p>ДОСТАВКА ВІД 29 ДО 59 ХВ,<br> АБО БУРГЕР У<br> ПОДАРУНОК!</p>
+        </div>
+        <div class="love_it">
+            <h2>ЯКІ ВИ <br> ПОЛЮБИТЕ!</h2>
+        </div>
+        <div class="more">
+            <button>БІЛЬШЕ</button>
+        </div>
+    </main>
 </body>
 </html>
